# shelly-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
shelly_cli/: __init__.py  __main__.py
src/: cache.rs  config.rs  errors.rs  groups.rs  health.rs  main.rs  output.rs  schema.rs  watch.rs
src/api/: discovery.rs  gen1.rs  gen2.rs  mod.rs
src/cli/: mod.rs
src/model/: device.rs  gen1_responses.rs  gen2_responses.rs  mod.rs  power.rs  status.rs
