[package]
name = "shelly-cli"
version = "0.1.2"
edition = "2024"
description = "CLI for managing and controlling Shelly devices"
license = "MIT"
repository = "https://github.com/rvben/shelly-cli"
homepage = "https://github.com/rvben/shelly-cli"
keywords = ["shelly", "home-automation", "iot", "smart-home", "cli"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
default-run = "shelly"

[[bin]]
name = "shelly"
path = "src/main.rs"

[[bin]]
name = "shelly-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ipnet = "2"
anyhow = "1"
toml = "0.8"
clap_complete = "4"
strsim = "0.11"
crossterm = "0.28"
chrono = "0.4"
owo-colors = "4"
netdev = "0.41"

[profile.release]
strip = true
lto = true
