[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "shelly-cli"
dynamic = ["version"]
description = "CLI for managing and controlling Shelly devices"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Ruben Jongejan", email = "ruben.jongejan@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Home Automation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rvben/shelly-cli"
Repository = "https://github.com/rvben/shelly-cli.git"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
python-packages = ["shelly_cli"]
strip = true
